--- a/css/styles.css
+++ b/css/styles.css
@@ -13,20 +13,21 @@ body {
     height: 100%;
 }
 
-#go-up{
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  box-shadow: 0px 4px 13px 5px rgba(0,0,0,0.75);
-  border-radius: 50%;
-  border:none;
-  color: #E91E63;
-  cursor: pointer;
+#go-up {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    box-shadow: 0px 4px 13px 5px rgba(0, 0, 0, 0.75);
+    border-radius: 50%;
+    border: none;
+    color: #E91E63;
+    cursor: pointer;
 }
-#go-up i{
-    font-size:30px;
+
+#go-up i {
+    font-size: 30px;
 }
 
 .header-wrapper {
@@ -56,20 +57,20 @@ body {
 .header-navigation ul {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between; 
+    justify-content: space-between;
 }
 
 
-.header-navigation ul a{
-     text-decoration: none;
-     color: inherit;
+.header-navigation ul a {
+    text-decoration: none;
+    color: inherit;
 }
 
 
 .header-navigation ul li {
     list-style-type: none;
     margin: 0 20px;
-    font-size: 20px;    
+    font-size: 20px;
 }
 
 #home-wrapper {
@@ -139,12 +140,20 @@ body {
     width: 25%;
 }
 
+#project-header h4 {
+    color: #37474F;
+}
+
 #projects .project img {
     width: 100%;
 }
 
 .project {
     box-shadow: -2px 0px 19px -8px rgba(0, 0, 0, 0.75);
+}
+
+.glide__slides{
+    display: flex !important;
 }
 
 .glide__arrow i {
@@ -156,7 +165,9 @@ body {
     border: none !important;
     box-shadow: none !important;
 }
-
+.glide__slide{
+    height: inherit !important;
+}
 .glide__arrow i:hover {
 
     color: #ed145b;
@@ -164,9 +175,28 @@ body {
 
 .glide__bullet {
     background: #00897B !important;
-
 }
 
+
+
+.image-frame {
+    background: transparent;
+    padding: 8px;
+    border: 4px solid #999999;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.image-frame>img {
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+    transition: all 1s, filter 3s ease-in-out;
+}
+
+.glide__slide:hover .image-frame > img{
+    width: 100%;
+}
 
 .glide__bullet--active {
     background: #455A64 !important;
@@ -213,37 +243,38 @@ body {
     margin-top: 15px !important;
 }
 
-#contact{
+#contact {
     height: 100%;
 }
-.contact-form{
+
+.contact-form {
     text-align: center;
-    width:50%;
+    width: 50%;
     margin: 0 auto;
     /* background:#009688; */
-    color:black;
+    color: black;
     padding: 15px;
-    box-shadow: 4px 9px 38px 0px rgba(0,0,0,0.75);
+    box-shadow: 4px 9px 38px 0px rgba(0, 0, 0, 0.75);
 }
 
-.contact-form input{
+.contact-form input {
     display: inline-block;
     margin: 10px;
-    width:60%;
+    width: 60%;
     padding: 15px;
-    border:none;
+    border: none;
     transition: all .25s ease;
-    border-bottom: 1px solid  grey;
+    border-bottom: 1px solid grey;
 }
 
-.contact-form input:focus{
+.contact-form input:focus {
     outline: none;
 }
 
-#send-message{
-    width:30%;
-    border:2px solid #F44336;
-    margin:15px auto;
+#send-message {
+    width: 30%;
+    border: 2px solid #F44336;
+    margin: 15px auto;
     padding: 15px;
     background: linear-gradient(to right, #F44336 50%, white 50%);
     background-size: 200% 100%;
@@ -251,7 +282,8 @@ body {
     transition: all .65s ease;
     cursor: pointer;
 }
-#send-message:hover{
+
+#send-message:hover {
     background-position: left bottom;
     color: white;
 }
@@ -320,4 +352,3 @@ body {
         transform-origin: top;
     }
 }
-
