--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,10 @@ body {
 }
 
 #go-up {
-    display: none;
+    /* display: none; */
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity .5s linear;
     position: fixed;
     bottom: 20px;
     right: 30px;
@@ -181,9 +184,48 @@ body {
 
 .image-frame {
     background: transparent;
-    padding: 8px;
-    border: 4px solid #999999;
+    padding: 15px;
     height: 100%;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    border-radius: 5px;
+}
+
+.image-frame::before{
+    content: '';
+    position: absolute;
+    z-index: -2;
+    left: -50%;
+    top: -50%;
+    width: 200%;
+    height: 200%;
+    background-color: #399953;
+    background-repeat: no-repeat;
+    background-size: 50% 50%, 50% 50%;
+    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-image: linear-gradient(#399953, #399953), linear-gradient(#fbb300, #fbb300), linear-gradient(#d53e33, #d53e33), linear-gradient(#377af5, #377af5);
+}
+
+.glide__slide:hover .image-frame::before{
+    animation: rotate 4s linear infinite;
+}
+
+.glide__slide:hover .image-info{
+    width: 95%;
+    left: 0;
+}
+
+
+.image-frame::after{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 6px;
+    top: 6px;
+    width: calc(100% - 12px);
+    height: calc(100% - 12px);
+    background: white;
     border-radius: 5px;
 }
 
@@ -193,10 +235,25 @@ body {
     margin: 0 auto;
     transition: all 1s, filter 3s ease-in-out;
 }
-
-.glide__slide:hover .image-frame > img{
-    width: 100%;
+.image-info{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: #008CBA;
+    overflow: hidden;
+    width: 0;
+    height: 95%;
+    transition: .5s ease;
+    margin: 0 auto;
 }
+
+.left{
+    left:100%;
+}
+.right{
+    left:0%;
+}
+
 
 .glide__bullet--active {
     background: #455A64 !important;
@@ -287,7 +344,6 @@ body {
     background-position: left bottom;
     color: white;
 }
-
 @keyframes changeText {
     0% {
         content: 'Full stack developer';
@@ -351,4 +407,10 @@ body {
         transform: rotateX(-360deg);
         transform-origin: top;
     }
+}
+
+@keyframes rotate {
+	100% {
+		transform: rotate(1turn);
+	}
 }
